Fix broken collapsed MenuGroup, close #7109

--- a/components/menu/style/index.less
+++ b/components/menu/style/index.less
@@ -28,8 +28,9 @@
   &-item-group-title {
     color: @text-color-secondary;
     font-size: @font-size-base;
-    line-height: 1.5;
+    line-height: @line-height-base;
     padding: 8px 16px;
+    transition: all .3s;
   }
 
   &-item,
@@ -336,7 +337,9 @@
 
   &-inline-collapsed {
     width: @menu-collapsed-width;
+
     > .@{menu-prefix-cls}-item,
+    > .@{menu-prefix-cls}-item-group > .@{menu-prefix-cls}-item-group-list > .@{menu-prefix-cls}-item,
     > .@{menu-prefix-cls}-submenu > .@{menu-prefix-cls}-submenu-title {
       left: 0;
       text-overflow: clip;
@@ -363,6 +366,14 @@
       a {
         color: @text-color-dark;
       }
+    }
+
+    .@{menu-prefix-cls}-item-group-title {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      padding-left: 4px;
+      padding-right: 4px;
     }
   }
 
